[package]
name = "rustlings"
version = "4.7.1"
authors = ["Stepanov Denis <stepanov.d.m@yandex.ru>"]
edition = "2021"
repository = "https://github.com/stepanov-denis/rustlings/"
keywords = ["rustlings"]
documentation = "https://docs.rs/stepanov-denis/rustlings/"
readme = "README.md"

[dependencies]
argh = "0.1"
indicatif = "0.16"
console = "0.15"
notify = "4.0"
toml = "0.5"
regex = "1.5"
serde= { version = "1.0", features = ["derive"] }

[[bin]]
name = "rustlings"
path = "src/main.rs"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.1"
glob = "0.3.0"

[features]
exercises = []
